[project]
name = "pulsar-browser-sdk"
version = "0.1.0"
description = "Python SDK for Browser4 WebDriver-compatible and AgenticSession APIs"
authors = ["Browser4 Team <devnull@example.com>"]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0"
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

