[metadata]
name = pulsar-browser-sdk
version = 0.1.0
description = Python SDK for Browser4
long_description = file: README.md
long_description_content_type = text/markdown
author = Browser4 Team

[options]
packages = find:
install_requires =
    requests>=2.31.0
    beautifulsoup4>=4.12.0
python_requires = >=3.9

